# ONNX-runtime

./: CMakeLists.txt
src/: CMakeLists.txt  image_classifier.cpp  image_classifier.h  main.cpp
